(fix): boosted icon is getting wrapped inside the text-ellipsis in firefox (#706)

--- a/src/app/modules/legacy/components/cards/cards.scss
+++ b/src/app/modules/legacy/components/cards/cards.scss
@@ -178,6 +178,7 @@ minds-card-image, minds-card-video {
         text-transform: uppercase;
         letter-spacing: 0.75px;
         text-rendering: optimizeLegibility;
+        text-overflow: unset;
 
         &:hover {
           text-decoration: underline;
